update swagger-data
